# redirector

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: criterion.rs  divan.rs
src/: bang.rs  cli.rs  config.rs  lib.rs  main.rs
