[package]
name = "redirector"
version = "0.7.0"
edition = "2024"
description = "A simple URL redirector"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
parking_lot = "0.12"
heck = "0.5.0"
memchr = "2.7"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9"
divan = "0.1"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "divan"
harness = false
